--- a/APFTestingUI/Views/Candidate/ViewPilot.cshtml
+++ b/APFTestingUI/Views/Candidate/ViewPilot.cshtml
@@ -142,6 +142,9 @@
     </div>
     <div class="clear"></div>
 <p class="button-container">
-    @Html.ActionLink("Edit", "EditPilot", new { candidateId = Model.Id }, new { @class="form-button" })
+    <span class="home-button-span">@Html.ActionLink("Home", "Index", "Examiner", new {}, new { @class="examiner-button"})</span>
+    <span class="control-button-span">
+        @Html.ActionLink("Edit", "EditPilot", new { candidateId = Model.Id }, new { @class="form-button" })
+    </span>
 </p>
 </div>
