--- a/APFTestingUI/Views/Candidate/CreatePacker.cshtml
+++ b/APFTestingUI/Views/Candidate/CreatePacker.cshtml
@@ -1,10 +1,10 @@
 ﻿@model APFTestingUI.Models.Candidate.CreatePacker
 
 @{
-    ViewBag.Title = "Create - Packer";
+    ViewBag.Title = "Packer Registration";
 }
 
-<h1>Create Packer</h1>
+<h1>Packer Registration</h1>
 <p>Please fill in the fields below to create a new Packer Candidate.<br />Asterisks (*) are placed next to required fields.</p>
 @using (Html.BeginForm()) {
     @Html.ValidationSummary(true)
