--- a/APFTestingUI/Views/Candidate/CreatePilot.cshtml
+++ b/APFTestingUI/Views/Candidate/CreatePilot.cshtml
@@ -1,14 +1,14 @@
 ﻿@model APFTestingUI.Models.Candidate.CreatePilot
 
 @{
-    ViewBag.Title = "Create - Pilot";
+    ViewBag.Title = "Pilot Registration";
 }
 
 @section styles {
     @Styles.Render("~/Content/themes/base/css")
 }
 
-<h1>Create Pilot</h1>
+<h1>Pilot Registration</h1>
 <p>Please fill in the fields below to create a new Pilot Candidate.<br />Asterisks (*) are placed next to required fields.</p>
 
 @using (Html.BeginForm()) {
