--- a/APFTestingUI/Views/Examiner/Index.cshtml
+++ b/APFTestingUI/Views/Examiner/Index.cshtml
@@ -52,11 +52,11 @@
                         {
                             @Html.ActionLink("Resume Exam", "Resume", "Exam", new { examId = candidate.LatestExamId }, new { @class = "examiner-button" })
                         }
-                        else if (candidate.TheoryComponentFailed)
+                        else if (candidate.TheoryComponentFailed || candidate.ExamVoided)
                         {
                             @Html.ActionLink("Retake Exam", "Start", "Exam", new { examinerId = Model.ExaminerId, candidateId = candidate.Id }, new { @class = "examiner-button" })
                         }
-                        else
+                        else if (candidate.TheoryPassed)
                         {
                             <p>Exam complete</p>                            
                         }
@@ -112,13 +112,13 @@
                         {
                             @Html.ActionLink("Resume Exam", "Resume", "Exam", new { examId = candidate.LatestExamId }, new { @class = "examiner-button" })
                         }
-                        else if (candidate.TheoryComponentFailed)
+                        else if (candidate.TheoryComponentFailed || candidate.ExamVoided)
                         {
                             @Html.ActionLink("Retake Exam", "Start", "Exam", new {examinerId = Model.ExaminerId, candidateId = candidate.Id}, new {@class = "examiner-button"})
                         }
-                        else
+                        else if (candidate.TheoryPassed)
                         {
-                            <p>Exam complete</p>                            
+                            <p>Exam complete</p>             
                         }
                     </td>
                     <td class="view-results-link">
