--- a/APFTestingUI/Views/Practical/PackerView.cshtml
+++ b/APFTestingUI/Views/Practical/PackerView.cshtml
@@ -41,9 +41,14 @@
     </tbody>
 </table>
 
-<p style="padding-right:15px;font-size:1em;">
+<p style="padding-right:15px; font-size:1em; margin-top:25px;padding-bottom:15px;">
     <span class="home-button-span">@Html.ActionLink("Home", "Index", "Examiner", new {}, new { @class="examiner-button"})</span>
     <span class="control-button-span">
+        @if (Model.IsCompetent)
+        {
+            @Html.ActionLink("Submit", "PackerSubmit", new { examId = @Model.ExamId }, new { @class = "examiner-button" })
+        }
+        
         @Html.ActionLink("Add", "PackerInput", new { examId = @Model.ExamId }, new { @class = "examiner-button" })
     </span>
 </p>
