--- a/APFTestingUI/Views/Examiner/Index.cshtml
+++ b/APFTestingUI/Views/Examiner/Index.cshtml
@@ -58,7 +58,7 @@
                         }
                         else
                         {
-                            <p>Exam complete</p>                            
+                            <p>Theory complete</p>                            
                         }
                     </td>
                     <td class="view-results-link">
@@ -118,7 +118,7 @@
                         }
                         else
                         {
-                            <p>Exam complete</p>                            
+                            <p>Theory complete</p>                            
                         }
                     </td>
                     <td class="view-results-link">
