--- a/APFTestingUI/Views/Candidate/ViewPilot.cshtml
+++ b/APFTestingUI/Views/Candidate/ViewPilot.cshtml
@@ -30,45 +30,17 @@
     <div class="clear"></div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Address1)
+        Address
     </div>
     <div class="display-field">
-        @Html.DisplayFor(model => model.Address1)
+        @Model.Address1<br />
+        @if (Model.Address2 != "")
+        {
+            @Model.Address2<br />
+        }
+        @Model.Suburb, @Model.State, @Model.Postcode
     </div>
     <div class="clear"></div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Address2)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Address2)
-    </div>
-    <div class="clear"></div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Suburb)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Suburb)
-    </div>
-    <div class="clear"></div>
-    
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.State)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.State)
-    </div>
-    <div class="clear"></div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Postcode)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Postcode)
-    </div>
-    <div class="clear"></div>
-
 
     <div class="display-label">
          @Html.DisplayNameFor(model => model.ARN)
