--- a/APFTestingUI/Content/Site.css
+++ b/APFTestingUI/Content/Site.css
@@ -736,6 +736,11 @@ a.button
         padding-bottom: 0.75em;
     }
 
+    .candidate-list p 
+    {
+        color: #aabbaa;
+    }
+
     .candidate-name a
     {
         color: #ffffff;
@@ -750,6 +755,7 @@ a.button
     min-width: 120px;
     font-weight: 300;
 }
+
 
 .candidate-first-name {
     width: 12%;
@@ -776,7 +782,7 @@ a.button
 .start-theory-link p {
     font-size: 1.3em;
     margin: 0 0 0 20px;
-    color: #999;
+    
 }
 
 .view-results-link {
@@ -1242,6 +1248,7 @@ td
     font-size:medium;
     color:#aabbaa;
 }
+
 
 
 /** Adding some buttons */
