--- a/APFTestingUI/Content/Site.css
+++ b/APFTestingUI/Content/Site.css
@@ -718,6 +718,7 @@ a.button
     width:100%;
 }
 
+
 .candidate-list th 
 {
     font-size: 1.3em;
@@ -775,7 +776,7 @@ a.button
 
 .start-theory-link p {
     font-size: 1.3em;
-    margin: 0 0 0 20px;
+    margin: 0 0 0 0;
     color: #999;
 }
 
