--- a/APFTestingUI/Views/Examiner/Index.cshtml
+++ b/APFTestingUI/Views/Examiner/Index.cshtml
@@ -58,7 +58,7 @@
                         }
                         else if (candidate.TheoryPassed)
                         {
-                            <p>Theory complete</p>                            
+                            <p>Theory completed</p>                            
                         }
                     </td>
                     <td class="view-results-link">
@@ -121,7 +121,7 @@
                         }
                         else if (candidate.TheoryPassed)
                         {
-                            <span>Theory completed</span>            
+                            <p>Theory completed</p>            
                         }
                     </td>
                     <td class="view-results-link">
@@ -137,7 +137,7 @@
                         }
                         else if (candidate.PracticalEntered)
                         {
-                            <span>Practical completed</span>    
+                            <p>Practical completed</p>    
                         }
                     </td>
                     
