--- a/APFTestingUI/Areas/Administration/Views/AssessmentTask/Index.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/AssessmentTask/Index.cshtml
@@ -1,28 +1,34 @@
 ﻿@model APFTestingUI.Areas.Administration.Models.AssessmentTaskManagement.AssessmentTaskList
-
 @{
     ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <style>
     #Assessment-Tasks-List {
-
     }
     
     #Assessment-Tasks-List .Assessment-Task-Title {
+        width: 20%;
+    }
 
+    #Assessment-Tasks-List .Assessment-Task-Details {
+        width: 40%;
     }
 
     #Assessment-Tasks-List .Assessment-Task-Max-Score {
+        width: 10%;
+        text-align: center;
     }
 
     #Assessment-Tasks-List .Assessment-Task-Actions {
+        width: 20%;
     }
 
 </style>
-<h2>Index</h2>
+<h2>Assessment Task Management</h2>
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New Assessment Task", "Create")
 </p>
 <table id="Assessment-Tasks-List">
     <tr>
@@ -39,9 +45,13 @@
         <td class="Assessment-Task-Details">@item.Details</td>
         <td class="Assessment-Task-Max-Score">@item.MaxScore</td>
         <td class="Assessment-Task-Actions">
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Details", "Details", new { id=item.Id })
+            @* Uncomment later 
+            @if(item.Editable) 
+            {
+                <text>*@ | @Html.ActionLink("Edit", "Edit", new { id=item.Id }) | 
+            @Html.ActionLink("Delete", "Delete", new { id=item.Id })@* Uncomment later</text>
+              } *@
         </td>
     </tr>
 }
