Added code for PracticalComponentTemplate creation and views, Pilot and Packer

--- a/APFTestingUI/Areas/Administration/Views/Home/Index.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/Home/Index.cshtml
@@ -14,3 +14,7 @@
 @Html.ActionLink("Manage Pilot Questions", "IndexPilot", "QuestionManagement")<br/><br/>
 
 @Html.ActionLink("Manage Packer Questions", "IndexPacker", "QuestionManagement")<br/><br/>
+
+@Html.ActionLink("Manage Pilot Practical Templates", "Index", "PracticalTemplatePilot")<br/><br/>
+
+@Html.ActionLink("Manage Packer Practical Templates", "Index", "PracticalTemplatePacker")<br/><br/>
