--- a/APFTestingUI/Areas/Administration/Views/TheoryFormat/Edit.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/TheoryFormat/Edit.cshtml
@@ -43,8 +43,8 @@
         </div>
         <div class="clear"></div>
 
-        <p>
-            <input type="submit" value="Save" />
+        <p class="button-container">
+            <input type="submit" value="Save" class="form-button" />
         </p>
     </fieldset>
 }
