--- a/APFTestingUI/Areas/Administration/Views/TheoryFormat/Create.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/TheoryFormat/Create.cshtml
@@ -50,8 +50,8 @@
         </div>
         <div class="clear"></div>
 
-        <p>
-            <input type="submit" value="Create" />
+        <p class="button-container">
+            <input type="submit" value="Create" class="form-button" />
         </p>
     </fieldset>
 }
